--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -130,6 +130,11 @@ hr {
   margin: 40px auto 60px auto;
 }
 
+.copyright{
+    color: #EAF6F6;
+    font-size: 0.75rem;
+}
+
 .butn {
   background: #11CDD4;
   background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
